# pinta

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/js/: mathjax_config.js
pinta/cli/: __main__.py  auth.py  jobs.py  main.py  users.py  websocket_client.py
pinta/cli/config/: config.ini  config.py
pinta/cli/images/: crud.py
pinta/cli/jobs/: commit.py  cp.py  crud.py  exec.py  logs.py
pinta/cli/volumes/: crud.py
